--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <h1>Работа с Git</h1>
+    <h2>Работа с GitHub</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, molestias itaque. Corrupti nesciunt eius
         dolorem impedit quia voluptatum eveniet, deserunt neque magnam ad rerum, aut est totam eos laudantium laborum.
     </p>
