--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis facere minus earum! Voluptate commodi quas
         vero debitis quasi molestiae atque, obcaecati non vel, odio sed in fugiat ipsa. Dolorem, rerum?</p>
+        <p>Все файлы перенесены на GitHub</p>
     <script src="script.js"></script>
 </body>
 
